--- a/kubernetes/argocd/applications/applications_bank-vault.yaml
+++ b/kubernetes/argocd/applications/applications_bank-vault.yaml
@@ -13,6 +13,12 @@ spec:
     server: https://kubernetes.default.svc
     namespace: vault
   sources:
+  - repoURL: 'https://helm.releases.hashicorp.com'
+    chart: vault
+    targetRevision: v0.28.1
+    helm:
+      valueFiles:
+      - $values/kubernetes/argocd/values/vault/values.yaml
   - repoURL: 'https://github.com/SoulKyu/my-homelab.git'
-    path: kubernetes/argocd/values/bank-vault
+    ref: values
     targetRevision: main
