--- a/kubernetes/argocd/applications/applications_vault-operator.yaml
+++ b/kubernetes/argocd/applications/applications_vault-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: vault
+  name: vault-operator
   namespace: argocd
 spec:
   syncPolicy:
