fix(argocd): correct application with oci repo

--- a/kubernetes/argocd/applications/applications_vault-operator.yaml
+++ b/kubernetes/argocd/applications/applications_vault-operator.yaml
@@ -13,7 +13,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: vault
   sources:
-  - chart: 'oci://ghcr.io/bank-vaults/helm-charts/vault-operator'
+  - repoURL: 'ghcr.io/bank-vaults/helm-charts'
+    path: vault-operator
     targetRevision: v1.22.3
     helm:
       valueFiles:
