--- a/kubernetes/argocd/applications/applications_vault-operator.yaml
+++ b/kubernetes/argocd/applications/applications_vault-operator.yaml
@@ -15,7 +15,7 @@ spec:
   sources:
   - repoURL: 'ghcr.io/bank-vaults/helm-charts'
     path: vault-operator
-    targetRevision: v1.22.3
+    targetRevision: 1.22.3
     helm:
       valueFiles:
       - $values/kubernetes/argocd/values/vault-operator/values.yaml
