--- a/kubernetes/argocd/applications/applications_vault-operator.yaml
+++ b/kubernetes/argocd/applications/applications_vault-operator.yaml
@@ -13,8 +13,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: vault
   sources:
-  - repoURL: 'ghcr.io/bank-vaults/helm-charts'
-    path: vault-operator
+  - chart: vault-operator
+    repoURL: ghcr.io/bank-vaults/helm-charts
     targetRevision: 1.22.3
     helm:
       valueFiles:
