--- a/kubernetes/argocd/applications/applications_vault-secret-webhook.yaml
+++ b/kubernetes/argocd/applications/applications_vault-secret-webhook.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: vault-operator
+  name: vault-secret-webhook
   namespace: argocd
 spec:
   syncPolicy:
