fix(argocd): fix scalewayddns path

--- a/kubernetes/argocd/applications/applications_scalewayddns.yaml
+++ b/kubernetes/argocd/applications/applications_scalewayddns.yaml
@@ -14,5 +14,5 @@ spec:
     namespace: scalewayddns
   sources:
   - repoURL: 'https://github.com/SoulKyu/my-homelab.git'
-    path: scaleway-ddns
+    path: kubernetes/argocd/values/scaleway-ddns
     targetRevision: main
