fix(cert-manager): fix chart name

--- a/kubernetes/argocd/applications/applications_cert-manager-scaleway.yaml
+++ b/kubernetes/argocd/applications/applications_cert-manager-scaleway.yaml
@@ -14,7 +14,7 @@ spec:
     namespace: cert-manager
   sources:
   - repoURL: 'https://helm.scw.cloud/'
-    chart: scaleway
+    chart: scaleway-certmanager-webhook
     targetRevision: 0.4.0
     helm:
       valueFiles:
