--- a/kubernetes/argocd/values/truenas/freenas-nfs-pool01.yaml
+++ b/kubernetes/argocd/values/truenas/freenas-nfs-pool01.yaml
@@ -78,8 +78,8 @@ driver:
       shareAlldirs: false
       shareAllowedHosts: []
       shareAllowedNetworks: []
-      shareMaprootUser: root
-      shareMaprootGroup: wheel
+      shareMaprootUser: admin
+      shareMaprootGroup: admin
       shareMapallUser: ""
       shareMapallGroup: ""
 
