--- a/kubernetes/argocd/values/truenas/secret.yaml
+++ b/kubernetes/argocd/values/truenas/secret.yaml
@@ -17,8 +17,8 @@ stringData:
       shareHost: 192.168.1.200
       shareMapallGroup: ""
       shareMapallUser: ""
-      shareMaprootGroup: admin
-      shareMaprootUser: admin
+      shareMaprootGroup: wheel
+      shareMaprootUser: root
     sshConnection:
       host: 192.168.1.200
       password: ${vault:secrets/data/truenas#password}
