fix(qbittorrent): remove vpn overwritte

--- a/kubernetes/argocd/values/qbittorrent/qbittorrent-deployment.yaml
+++ b/kubernetes/argocd/values/qbittorrent/qbittorrent-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: linux
-      dnsPolicy: "None"
+      #dnsPolicy: "None"
       #dnsConfig:
       #  nameservers:
       #    - 9.9.9.9
