fix(gluetun): fix variable names

--- a/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
+++ b/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
@@ -15,7 +15,7 @@ stringData:
   SERVER_COUNTRIES: "vault:secrets/data/wireguard#SERVER_COUNTRIES"
   SERVER_CITIES: "vault:secrets/data/wireguard#SERVER_CITIES"
   SERVER_HOSTNAMES: "vault:secrets/data/wireguard#SERVER_HOSTNAMES"
-  VPN_ENDPOINT_PORT: "vault:secrets/data/wireguard#VPN_ENDPOINT_PORT"
-  VPN_PORT_FORWARDING: "vault:secrets/data/wireguard#VPN_PORT_FORWARDING"
-  VPN_PORT_FORWARDING_PROVIDER: "vault:secrets/data/wireguard#VPN_PORT_FORWARDING_PROVIDER"
+  WIREGUARD_ENDPOINT_PORT: "vault:secrets/data/wireguard#VPN_ENDPOINT_PORT"
+  WIREGUARD_PORT_FORWARDING: "vault:secrets/data/wireguard#VPN_PORT_FORWARDING"
+  WIREGUARDPORT_FORWARDING_PROVIDER: "vault:secrets/data/wireguard#VPN_PORT_FORWARDING_PROVIDER"
 type: Opaque
