--- a/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
+++ b/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
@@ -18,4 +18,5 @@ stringData:
   WIREGUARD_ENDPOINT_PORT: "vault:secrets/data/wireguard#VPN_ENDPOINT_PORT"
   WIREGUARD_PORT_FORWARDING: "vault:secrets/data/wireguard#VPN_PORT_FORWARDING"
   WIREGUARDPORT_FORWARDING_PROVIDER: "vault:secrets/data/wireguard#VPN_PORT_FORWARDING_PROVIDER"
+  DNS_ADDRESS: "vault:secrets/data/wireguard#DNS_ADDRESS"
 type: Opaque
