fix(wireguard): still not working

--- a/kubernetes/argocd/values/qbittorrent/qbittorrent-deployment.yaml
+++ b/kubernetes/argocd/values/qbittorrent/qbittorrent-deployment.yaml
@@ -22,8 +22,9 @@ spec:
       dnsConfig:
         nameservers:
           - 9.9.9.9
-      containers:
+      initContainers:
         - name: gluetun-ivpn
+          restartPolicy: Always
           image: qmcgaw/gluetun:latest
           env:
            # If you having connection issues, try enabling these variables to help diagnose it.
@@ -31,6 +32,8 @@ spec:
            #   value: "on"
            # - name: FIREWALL_INPUT_PORTS
            #   value: "8080"
+            - name: TZ
+              value: 'UTC'
             - name: HEALTH_TARGET_ADDRESS
               value: 127.0.0.1:8080
             - name: EXTRA_SUBNETS
@@ -41,8 +44,6 @@ spec:
               value: 10.0.0.0/8
             - name: FIREWALL_INBOUND_SUBNETS
               value: 10.0.0.0/8
-            - name: FIREWALL_VPN_INPUT_PORTS
-              value: "44053"
           envFrom:
             - secretRef:
                 name: qbittorrent-wireguard
@@ -56,7 +57,19 @@ spec:
             - containerPort: 8388                   
             - containerPort: 8388                   
               protocol: UDP                         
-            - containerPort: 8000      
+            - containerPort: 8000
+        - name: ping
+          image: busybox
+          command:
+              - sh
+              - -c
+              - |
+                  while ! ping -c 1 8.8.8.8; do
+                    echo "Ping failed, retrying in 5"
+                    sleep 5
+                  done
+                  echo "ping successful, exiting"
+      containers: 
         - name: qbittorrent
           image: lscr.io/linuxserver/qbittorrent:latest
           imagePullPolicy: Always
