specific wireguard ip

--- a/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
+++ b/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
@@ -16,4 +16,5 @@ stringData:
   SERVER_CITIES: "vault:secrets/data/wireguard#SERVER_CITIES"
   SERVER_HOSTNAMES: "vault:secrets/data/wireguard#SERVER_HOSTNAMES"
   WIREGUARD_ENDPOINT_PORT: "vault:secrets/data/wireguard#VPN_ENDPOINT_PORT"
+  WIREGUARD_ENDPOINT_IP: "185.212.170.141"
 type: Opaque
