--- a/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
+++ b/kubernetes/argocd/values/qbittorrent/qbittorrent-secret.yaml
@@ -8,13 +8,11 @@ metadata:
     vault.security.banzaicloud.io/vault-skip-verify: "true"
     vault.security.banzaicloud.io/vault-path: "kubernetes"
 stringData:
-  VPN_SERVICE_PROVIDER: "vault:secrets/data/wireguard#VPN_SERVICE_PROVIDER"
   VPN_TYPE: "vault:secrets/data/wireguard#VPN_TYPE"
+  VPN_SERVICE_PROVIDER: "vault:secrets/data/wireguard#VPN_SERVICE_PROVIDER"
+  WIREGUARD_ENDPOINT_IP: "vault:secrets/data/wireguard#WIREGUARD_ENDPOINT_IP"
+  WIREGUARD_ENDPOINT_PORT: "vault:secrets/data/wireguard#WIREGUARD_ENDPOINT_PORT"
+  WIREGUARD_PUBLIC_KEY: "vault:secrets/data/wireguard#WIREGUARD_PUBLIC_KEY"
   WIREGUARD_PRIVATE_KEY: "vault:secrets/data/wireguard#WIREGUARD_PRIVATE_KEY"
   WIREGUARD_ADDRESSES: "vault:secrets/data/wireguard#WIREGUARD_ADDRESSES"
-  SERVER_COUNTRIES: "vault:secrets/data/wireguard#SERVER_COUNTRIES"
-  SERVER_CITIES: "vault:secrets/data/wireguard#SERVER_CITIES"
-  SERVER_HOSTNAMES: "vault:secrets/data/wireguard#SERVER_HOSTNAMES"
-  WIREGUARD_ENDPOINT_PORT: "vault:secrets/data/wireguard#VPN_ENDPOINT_PORT"
-  WIREGUARD_ENDPOINT_IP: "185.212.170.141"
 type: Opaque
