feat(csi): migrate to https connection

--- a/kubernetes/argocd/values/truenas/secret.yaml
+++ b/kubernetes/argocd/values/truenas/secret.yaml
@@ -4,23 +4,23 @@ stringData:
     driver: freenas-nfs
     httpConnection:
       allowInsecure: true
-      host: 192.168.1.200
+      host: nas.local.soulkyu.net
       password: ${vault:secrets/data/truenas#password}
-      port: 80
-      protocol: http
+      port: 443
+      protocol: https
       username: ${vault:secrets/data/truenas#user}
     instance_id: truenas
     nfs:
       shareAlldirs: false
       shareAllowedHosts: []
       shareAllowedNetworks: []
-      shareHost: 192.168.1.200
+      shareHost: nas.local.soulkyu.net
       shareMapallGroup: ""
       shareMapallUser: ""
       shareMaprootGroup: wheel
       shareMaprootUser: root
     sshConnection:
-      host: 192.168.1.200
+      host: nas.local.soulkyu.net
       password: ${vault:secrets/data/truenas#password}
       port: 22
       username: ${vault:secrets/data/truenas#user}
