--- a/kubernetes/argocd/values/truenas/freenas-nfs-pool01.yaml
+++ b/kubernetes/argocd/values/truenas/freenas-nfs-pool01.yaml
@@ -18,9 +18,9 @@ driver:
     driver: freenas-nfs
     instance_id: truenas
     httpConnection:
-      protocol: http
-      host: 192.168.1.200
-      port: 80
+      protocol: https
+      host: nas.local.soulkyu.net
+      port: 443
       # use only 1 of apiKey or username/password
       # if both are present, apiKey is preferred
       # apiKey is only available starting in TrueNAS-12
@@ -32,7 +32,7 @@ driver:
       # leave unset for auto-detection
       #apiVersion: 2
     sshConnection:
-      host: 192.168.1.200
+      host: nas.local.soulkyu.net
       port: 22
       username: ${vault:secrets/data/truenas#user}
       password: ${vault:secrets/data/truenas#password}
