--- a/kubernetes/argocd/values/jellyfin/jellyfin-deployment.yaml
+++ b/kubernetes/argocd/values/jellyfin/jellyfin-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         kubernetes.io/hostname: k3s-server02
       containers:
         - name: jellyfin
-          image: lscr.io/linuxserver/jellyfin:10.10.0
+          image: lscr.io/linuxserver/jellyfin:latest
           imagePullPolicy: Always
           env:
             - name: DOCKER_MODS
